tests/suite/snapshots/suite__check__tests__check__bad-return4.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-return4.xi:2:5]
   │
 2 │     return
   ·     ───┬──  
   ·        ╰──── Return mismatch
───╯

